@@ -1,13 +1,4 @@
-/*
- * This file was generated by the Gradle 'init' task.
- *
- * This generated file contains a sample Java Library project to get you started.
- * For more details take a look at the Java Libraries chapter in the Gradle
- * User Manual available at https://docs.gradle.org/6.0.1/userguide/java_library_plugin.html
- */
-
 plugins {
-    // Apply the java-library plugin to add support for Java Library
     id 'java'
     id 'application'
 }
@@ -36,11 +27,9 @@ dependencies {
     compileOnly 'org.projectlombok:lombok:1.18.10'
     annotationProcessor 'org.projectlombok:lombok:1.18.10'
 
-    // https://mvnrepository.com/artifact/org.slf4j/slf4j-api
-    implementation group: 'org.slf4j', name: 'slf4j-api', version: '1.7.26'
-
-    // https://mvnrepository.com/artifact/org.slf4j/slf4j-log4j12
-    implementation group: 'org.slf4j', name: 'slf4j-log4j12', version: '1.7.30'
+    implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.13.1'
+    implementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.13.1'
+    implementation group: 'org.apache.logging.log4j', name: 'log4j-slf4j18-impl', version: '2.13.1'
 }
 
 test {
@@ -48,36 +37,14 @@ test {
 }
 
 jar {
+    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
     manifest {
-        attributes 'Main-Class': application.mainClassName
+        attributes(
+                'Main-Class': application.mainClassName,
+                'Multi-Release': 'true'
+        )
     }
     from {
         configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
     }
 }
-
-//tasks.withType(JavaCompile) {
-//    configure(options) {
-//        options.compilerArgs.add('--enable-preview')
-//        options.fork = true
-//        options.forkOptions.executable = '/Users/tatumalenko/.sdkman/candidates/java/13.0.1.hs-adpt/bin/javac'
-//    }
-//}
-
-//tasks.withType(JavaExec) {
-//    configure(jvmArgs) {
-//        jvmArgs.add('--enable-preview')
-//    }
-//}
-//
-//run {
-//    jvmArgs '--enable-preview'
-//}
-//
-//test {
-//    jvmArgs '--enable-preview'
-//}
-
-//tasks.named(':ExpressionProblem.main()')
-//
-//}
